Added "not affiliated" copyright thing.

--- a/app/templates/index-bottom.html
+++ b/app/templates/index-bottom.html
@@ -15,6 +15,7 @@
 			{{/readings_length}}
 		{{/has_readings}}
 		<div class="copyright">Copyright (c) 2013 Michael Angstadt</div>
+		<div class="copyright">EMC Investigator is a fan creation and is not affiliated with Empire Minecraft (copyright Kalland Labs) or Minecraft (copyright Mojang).</div>
 	</body>
 </html>
 
