--- a/app/templates/index-bottom.html
+++ b/app/templates/index-bottom.html
@@ -16,6 +16,24 @@
 		{{/has_readings}}
 		<div class="copyright">Copyright (c) 2013 Michael Angstadt</div>
 		<div class="copyright">EMC Investigator is a fan creation and is not affiliated with Empire Minecraft (copyright Kalland Labs) or Minecraft (copyright Mojang).</div>
+		
+		{{#stat_counter}}
+			<script type="text/javascript">
+				var sc_project=9182233; 
+				var sc_invisible=1; 
+				var sc_security="31c75544"; 
+				var sc_https=1; 
+				var scJsHost = (("https:" == document.location.protocol) ? "https://secure." : "http://www.");
+				document.write("<sc"+"ript type='text/javascript' src='" + scJsHost + "statcounter.com/counter/counter.js'></"+"script>");
+			</script>
+			<noscript>
+				<div class="statcounter">
+					<a title="web stats" href="http://statcounter.com/" target="_blank">
+						<img class="statcounter" src="http://c.statcounter.com/9182233/0/31c75544/1/" alt="web stats">
+					</a>
+				</div>
+			</noscript>
+		{{/stat_counter}}
 	</body>
 </html>
 
