--- a/app/templates/index-bottom.html
+++ b/app/templates/index-bottom.html
@@ -14,8 +14,8 @@
 				</script>
 			{{/readings_length}}
 		{{/has_readings}}
-		<div class="copyright">Copyright (c) 2013 Michael Angstadt</div>
-		<div class="copyright">EMC Investigator is a fan creation and is not affiliated with Empire Minecraft (copyright Kalland Labs) or Minecraft (copyright Mojang).</div>
+		<div class="copyright">Copyright (c) 2013-2014 Michael Angstadt</div>
+		<div class="copyright">EMC Investigator is a fan creation and is not affiliated with Empire Minecraft (copyright Starlis) or Minecraft (copyright Mojang).</div>
 		
 		{{#stat_counter}}
 			<script type="text/javascript">
